--- a/package.json
+++ b/package.json
@@ -1,22 +1,51 @@
 {
-  "name": "a98c14",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.14",
-    "@types/react": "17.0.39",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
-  }
+    "name": "a98c14",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest -config ./config/jest.config.js --all"
+    },
+    "dependencies": {
+        "@react-three/drei": "^8.8.0",
+        "@react-three/fiber": "^7.0.26",
+        "leva": "^0.9.19",
+        "next": "12.0.10",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-spring": "^9.4.2",
+        "react-use-gesture": "^9.1.3",
+        "three": "^0.137.5",
+        "zustand": "^3.6.9"
+    },
+    "devDependencies": {
+        "@babel/preset-typescript": "^7.16.7",
+        "@next/bundle-analyzer": "^12.0.10",
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.2",
+        "@types/node": "17.0.14",
+        "@types/react": "17.0.39",
+        "@types/three": "^0.137.0",
+        "autoprefixer": "^10.4.2",
+        "babel-jest": "^27.5.0",
+        "eslint": "8.8.0",
+        "eslint-config-next": "12.0.10",
+        "file-loader": "^6.2.0",
+        "glslify": "^7.1.1",
+        "glslify-loader": "^2.0.0",
+        "jest": "^27.5.0",
+        "jest-css-modules": "^2.1.0",
+        "next-compose-plugins": "^2.2.1",
+        "next-offline": "^5.0.5",
+        "next-transpile-modules": "^9.0.0",
+        "postcss": "^8.4.6",
+        "prettier": "^2.5.1",
+        "raw-loader": "^4.0.2",
+        "tailwindcss": "^3.0.18",
+        "ts-shader-loader": "^1.0.6",
+        "typescript": "4.5.5",
+        "url-loader": "^4.1.1"
+    }
 }
