--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "next": "12.0.10",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-query": "^3.34.14",
         "react-spring": "^9.4.2",
         "react-use-gesture": "^9.1.3",
         "three": "^0.137.5",
