--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-spring": "^9.4.2",
         "react-use-gesture": "^9.1.3",
         "three": "^0.137.5",
+        "uuid": "^8.3.2",
         "zustand": "^3.6.9"
     },
     "devDependencies": {
@@ -29,6 +30,7 @@
         "@types/node": "17.0.14",
         "@types/react": "17.0.39",
         "@types/three": "^0.137.0",
+        "@types/uuid": "^8.3.4",
         "autoprefixer": "^10.4.2",
         "babel-jest": "^27.5.0",
         "eslint": "8.8.0",
